<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">TimeR Machine</string>
    <string name="understand">I get it</string>
    <string name="add">Add</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="duplicate">Duplicate</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="nav_up">Navigate up</string>
    <string name="open_menu">Open menu</string>
    <string name="edit">Edit</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="exit">Exit</string>
    <string name="move">Move</string>
    <string name="expand">Expand</string>
    <string name="deselect">Deselect</string>
    <string name="share">Share</string>
    <string name="dismiss">Dismiss</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="plus_one_minute">Add 1 Minute</string>
    <string name="unknown">Unknown</string>
    <string name="never_show_again">Never show again</string>
    <string name="thanks">Thanks for your support!</string>
    <string name="consume_data_warning">This will open a web page and consume mobile data</string>
    <string name="no_action_found">No apps can perform this action</string>
    <string name="empty">Empty</string>
    <string name="count_down_template" translatable="false">%s(%s)</string>
    <string name="delete_confirmation_template">Delete %s?</string>
    <string name="delete_done_template">%s deleted</string>
    <string name="trash_done_template">%s trashed</string>
    <string name="save_changes">Save changes?</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_of_service">Terms</string>
    <string name="main_action_timers">Timers</string>
    <string name="main_action_schedulers">Schedulers</string>
    <string name="main_action_backup">Backup &amp; Restore</string>
    <string name="main_action_help">Help &amp; Feedback</string>
    <string name="main_action_settings">Settings</string>
    <string name="main_action_dark">Dark Theme</string>
    <string name="main_action_record">Records</string>
    <string name="perm_rational_shortcut">To create a shortcut, grant the app \"Install Shortcut\" permission</string>
    <string name="perm_rational_floating">To show a floating window, grant the app \"Floating Window\" permission</string>
    <plurals name="timers">
        <item quantity="one">1 timer</item>
        <item quantity="other">%1$s timers</item>
    </plurals>
    <string name="timer_pick_required">Click here to pick a timer</string>
    <string name="timer_pick_hint">Pick a timer</string>
    <string name="folder_default">Default Set</string>
    <string name="folder_new_folder">New timer set</string>
    <string name="folder_trash">Trash</string>
    <string name="folder_name">Set Name</string>
    <string name="folder_rename">Rename set</string>
    <string name="folder_delete">Delete set</string>
    <string name="folder_delete_timer_explanation">The timer with its records and schedulers will be permanently deleted</string>
    <string name="folder_trash_folder_confirmation">Move timers to trash?</string>
    <string name="folder_empty_trash_confirmation">Empty trash?</string>
    <string name="folder_sort">Sort by</string>
    <string name="folder_sort_added_newest">Newest added first</string>
    <string name="folder_sort_added_oldest">Oldest added first</string>
    <string name="folder_sort_run_newest">Newest run first</string>
    <string name="folder_sort_run_oldest">Oldest run first</string>
    <string name="folder_sort_a_to_z">Name A ➝ Z</string>
    <string name="folder_sort_z_to_a">Name Z ➝ A</string>
    <string name="folder_to_list_view">Switch to list view</string>
    <string name="folder_to_grid_view">Switch to grid view</string>
    <string name="edit_create_timer">Create Timer</string>
    <string name="edit_edit_timer">Edit Timer</string>
    <string name="edit_default_timer_name">Timer</string>
    <string name="edit_step_name">Step Name</string>
    <string name="edit_default_step_name">Step</string>
    <string name="edit_default_notifier_name">Notifier</string>
    <string name="edit_group">Group</string>
    <string name="edit_start_step">Timer Start</string>
    <string name="edit_end_step">Timer End</string>
    <string name="edit_group_start">Group Start</string>
    <string name="edit_group_end">Group End</string>
    <string name="edit_delete_group">Delete group</string>
    <string name="edit_step">Edit Step</string>
    <string name="edit_add_step">Add a new step</string>
    <string name="edit_add_normal">Normal</string>
    <string name="edit_add_normal_desp">Add a normal step</string>
    <string name="edit_add_notifier">Notifier</string>
    <string name="edit_add_notifier_desp">A convenient reminding step. It remembers your edit</string>
    <string name="edit_add_group">Group</string>
    <string name="edit_add_group_desp">It has its name and loop and can contain steps</string>
    <string name="edit_add_start">Start Step</string>
    <string name="edit_add_start_desp">Run a step once at the start of the whole task to prepare yourself</string>
    <string name="edit_add_start_too_many">There is already a start step</string>
    <string name="edit_add_end">End Step</string>
    <string name="edit_add_end_desp">Run a step once at the end of the whole task to wind up</string>
    <string name="edit_add_end_too_many">There is already an end step</string>
    <string name="edit_at_least_1s">The duration should be at least 1 second</string>
    <string name="edit_wrong_empty_name">Timer name should not be empty</string>
    <string name="edit_wrong_negative_loop">The loop should be a positive number</string>
    <string name="edit_wrong_empty_steps">There should be at least one step</string>
    <string name="edit_more_show_notif">Show timing notification</string>
    <string name="edit_more_notif_count">Show remaining time in the notification</string>
    <string name="edit_more_trigger">After the timer finishes, start</string>
    <string name="edit_more_a11y">More timer settings</string>
    <string name="edit_cant_move_start">Unable to move the start step</string>
    <string name="edit_cant_move_end">Unable to move the end step</string>
    <string name="edit_cant_move_group">Unable to move a group</string>
    <string name="edit_cant_move_footer">Unable to move these buttons</string>
    <string name="edit_share_as_text">Share as text</string>
    <string name="edit_import_from_the_clipboard">Import from the clipboard</string>
    <string name="name_loop_name_hint">Name</string>
    <string name="name_loop_loop_hint">Loop</string>
    <string name="time_picker_type_panel">Panel</string>
    <string name="time_picker_type_scroll">Scroll</string>
    <string name="behaviour_no_behaviours">A Silent Step</string>
    <string name="behaviour_add_new">Add a reminder</string>
    <string name="behaviour_music">Music</string>
    <string name="behaviour_music_help">Play music at this step</string>
    <string name="music_pick_ringtone">Pick Step Music</string>
    <string name="music_loop">Loop</string>
    <string name="music_saf_pick">SAF Pick</string>
    <string name="music_saf_pick_desp">If you would like to pick music without granting permission, or the default ringtone picker doesn\'t show your music, enabling this option might help.</string>
    <string name="behaviour_vibration">Vibration</string>
    <string name="behaviour_vibration_help">Vibrate the phone at this step</string>
    <string name="vibration_count">Count</string>
    <string name="vibration_count_desp_template" formatted="false" translatable="false">* %s\n* %s</string>
    <string name="vibration_count_desp_0">0 for keeping vibrating until the end of the step.</string>
    <string name="vibration_count_desp_range">The count should be between 0 and 100.</string>
    <string name="vibration_pattern">Pattern</string>
    <string name="vibration_short">Short Vibration</string>
    <string name="vibration_normal">Normal Vibration</string>
    <string name="vibration_long">Long Vibration</string>
    <string name="behaviour_screen">Screen</string>
    <string name="behaviour_screen_help">Wake up the phone and show a reminding screen</string>
    <string name="screen_fullscreen">Always Fullscreen</string>
    <string name="behaviour_halt">Halt</string>
    <string name="behaviour_halt_help">Stay at the step until you move on manually, and make it forward-timing</string>
    <string name="behaviour_voice">Voice</string>
    <string name="behaviour_voice_help">Read this step name</string>
    <string name="voice_content_title">Talking Content</string>
    <string name="voice_content_info_empty">* If the field is empty, step name will be spoken.</string>
    <string name="voice_content_info_variables_intro">* Click the \"Variables\" button at the bottom to pick variables. They will be replaced with the corresponding value when running.</string>
    <string name="voice_content_group_variables">* Variables whose description starts with \"(Group)\" means when the step is in a group, the value is calculated based on the group instead of the timer.</string>
    <string name="voice_variables">Variables</string>
    <string name="voice_loop">Current loop</string>
    <string name="voice_total_loop">Total loop</string>
    <string name="voice_step_name">Step name</string>
    <string name="voice_step_duration">Step duration</string>
    <string name="voice_group_variable" translatable="false">@string/edit_group</string>
    <string name="voice_time_variable">Time</string>
    <string name="voice_current_time">Current time(e.g. %s)</string>
    <string name="voice_group_end_time">Group end time</string>
    <string name="voice_content2_enable">Use new variables</string>
    <string name="voice_content2_disable">Use old variables</string>
    <string name="voice_variable_info_empty" translatable="false">@string/voice_content_info_empty</string>
    <string name="voice_variable_info_usage">* Variables will be replaced with the corresponding value when running.</string>
    <string name="voice_variable_info_operations">* Tap variables to insert them into the text box. Long press to check its usage.</string>
    <string name="voice_variable_timer_group">Timer</string>
    <string name="voice_variable_timer_name" translatable="false">{TName}</string>
    <string name="voice_variable_timer_name_desp">Timer name</string>
    <string name="voice_variable_timer_loop" translatable="false">{TLoop}</string>
    <string name="voice_variable_timer_loop_desp">Timer current loop</string>
    <string name="voice_variable_timer_total_loop" translatable="false">{TTotalLoop}</string>
    <string name="voice_variable_timer_total_loop_desp">Timer total loop</string>
    <string name="pref_reminder_baked_count_desp">When counting down from 20 to 0, play recorded sound instead of synthesizing the speech from text.\n\nThis is faster and more consistent.</string>
    <string name="pref_reminder_baked_count_downloading">Downloading resources…</string>
    <string name="billing_loading">Loading</string>
    <string name="billing_explanation" formatted="false">"By tapping "Subscribe," your payment will be charged to your Google Play Store account. Your subscription will automatically renew for the same plan length at the same price until you cancel it on Subscriptions in the Google Play Store at least 24 hours before the end of the current period. By tapping "Subscribe," you agree to our %s and %s."</string>
    <string name="billing_cancel_anytime">Recurring billing. Cancel anytime.</string>
    <string name="billing_manage_subscription">Manage Subscription</string>
</resources>