<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardPro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/fragmentContainerOneTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:background="#50FFB11B"
                    tools:layout_height="192dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end|center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textProPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:textAppearance="?textAppearanceSubtitle2"
                        android:textColor="?android:textColorPrimary"
                        android:visibility="gone"
                        tools:text="$4.99"
                        tools:visibility="visible" />

                    <Button
                        android:id="@+id/btnProPurchase"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:enabled="false"
                        android:text="@string/billing_loading" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardBackupSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/fragmentContainerCloudBackup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:background="#50FFB11B"
                    tools:layout_height="64dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end|center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textBackupSubPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:textAppearance="?textAppearanceSubtitle2"
                        android:textColor="?android:textColorPrimary"
                        android:visibility="gone"
                        tools:text="$1.99/Year"
                        tools:visibility="visible" />

                    <Button
                        android:id="@+id/btnBackupSubSubscribe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:enabled="false"
                        android:text="@string/billing_loading" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnBackupSubManage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/billing_manage_subscription"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/textBackupSubCancelAnytime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/billing_cancel_anytime"
                    android:textAppearance="?textAppearanceCaption"
                    android:textStyle="bold"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/textBackupSubPpTos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:textAppearance="?textAppearanceCaption"
                    android:visibility="visible"
                    tools:text="@string/billing_explanation"
                    tools:visibility="visible" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</ScrollView>
